Updated gitignore added comments

--- a/test/ServiceBusExample.Test/App.config
+++ b/test/ServiceBusExample.Test/App.config
@@ -6,6 +6,7 @@
   </configSections>
 
   <queueSettings>
+    <!-- Endpoint=sb://yourservice-ns.servicebus.windows.net/;SharedAccessKeyName=Root...... etc -->
     <add key="ConnectionString" value=""/>
   </queueSettings>
 
